2006-09-13  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/image/RescaleOp/filterRaster.java
	(simpleTests): Remove hard-coded max sample value.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getControlTextFont.java
	(test): Add checks for 'swing.boldMetal' UI default setting,
	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getMenuTextFont.java
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getSubTextFont.java
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getSystemTextFont.java
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getUserTextFont.java
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/metal/DefaultMetalTheme/getWindowTitleFont.java
	(test): Likewise.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/OceanTheme/addCustomEntriesToTable.java:
	New test.

2006-09-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/AttributedCharacterIterator/getRunLimit.java
	(test1): Added checks,
	* gnu/testlet/java/text/AttributedCharacterIterator/Attribute/toString.java:
	New test.

2006-09-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/text/AttributedCharacterIterator/getRunLimit.java:
	New test,
	* gnu/testlet/java/text/AttributedString/constructors.java
	(testConstructor3): Added new checks.

2006-09-09  Casey Marshall  <csm@gnu.org>

	* gnu/testlet/java/net/NetworkInterface/Consistency.java: new
	test.
	* gnu/testlet/java/net/NetworkInterface/getByName.java (test):
	don't test for interfaces named "lo".

2006-09-08  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/net/InetAddress/getAllByName.java: Do not test
	for whitespace-stripping of hostnames. 

2006-09-07  David Gilbert  <david.gilbert@object-refinery.com>
