@@ -1,3 +1,7 @@
+2006-09-13  Tania Bento  <tbento@redhat.com>
+	
+	* gnu/testlet/javax/swing/JTable/getCellRect.java: New test.
+
 2006-09-13  Francis Kung  <fkung@redhat.com>
 
 	* gnu/testlet/java/awt/image/RescaleOp/filterRaster.java
